--- a/angular-whishlist/src/app/destino-viaje/destino-viaje.component.html
+++ b/angular-whishlist/src/app/destino-viaje/destino-viaje.component.html
@@ -8,7 +8,8 @@
 
 			<div	class="card-content">
 							<div	class="card-img">
-											<img	src="https://placeimg.com/380/230/nature"	alt="">
+											<!--<img	src="https://placeimg.com/380/230/nature"	alt="">-->
+											<img	src="{{destino.imagenUrl}}"	alt="">
 											<span><h4>{{destino.nombre}}</h4></span>
 							</div>
 							<div	class="card-desc">
